# Keeply-Agent

./: .gitignore  CMakeLists.txt  README.md  agente_main.cpp  apagar_pastas_restart.sh  build_native_windows.ps1  build_windows_wsl.sh  keeply.cpp  keeply.hpp  keeply.sh  keeply_impl.cpp  main_cli.cpp  main_unified.cpp  platform_utils.cpp  platform_utils.hpp  restart-local-secure.sh  restart.sh  run.sh  scan.cpp  storage.cpp
.github/workflows/: build-installers.yml
API/: keeply_api.cpp  keeply_api.hpp
ApiRest/: api-rest.cpp  api-rest.hpp  api.cpp
Backup/: cbt.cpp  cbt.hpp  change_tracker.cpp  change_tracker.hpp  change_watcher.cpp  change_watcher.hpp  compactacao_e_hash.cpp  compactar.cpp  daemon.cpp  delta_rsync.cpp  delta_rsync.hpp  engines.hpp  keeply_utils.hpp  keeply_verify.cpp  local.cpp  monitor_mudancas_segundo_plano.cpp  rastreamento_mudancas.cpp  rastreamento_mudancas.hpp  restauracao.cpp  restore.cpp  s3.cpp  scan.cpp  sqlite_util.hpp  storage.cpp  storage_backend.hpp  utilitarios_backup.hpp  varredura.cpp  varredura_backup.cpp  verificacao.cpp  verificacao_integridade.cpp
Backup/Armazenamentos/: acesso_arquivo_local.cpp  arquivo_armazenamento.cpp  backend_armazenamento.hpp  exportacao_bundle_nuvem.cpp  fabrica_objetos_armazenamento.cpp  fabrica_objetos_armazenamento.hpp
Backup/Linux/: daemon.cpp  daemon_rastreamento_mudancas.cpp  inotify_service.cpp  monitor_inotify_linux.cpp
Backup/Rastreamento/: rastreamento_mudancas.cpp  rastreamento_mudancas.hpp
Backup/Rastreamento/Linux/: daemon.cpp
Backup/Rastreamento/Windows/: daemon.cpp
Backup/Storages/: StorageObjectFactory.cpp  StorageObjectFactory.hpp  local.cpp  s3.cpp  storage.cpp
Backup/Windows/: daemon.cpp  daemon_rastreamento_mudancas.cpp
Cloud/: fila_upload.cpp  fila_upload.hpp
Core/: compactacao.cpp  plataforma.cpp  sqlite_util.hpp  tipos.hpp  tls_context.cpp  tls_context.hpp  utilitarios.hpp
HTTP/: agent_ws_main.cpp  api-rest.cpp  api.cpp  api_ws_smoke_main.cpp  cliente_http.cpp  fila_upload_paralela.cpp  fila_upload_paralela.hpp  http_interno.cpp  http_util.cpp  http_util.hpp  multithread.cpp  rest_http_main.cpp  servidor_rest.cpp  servidor_rest.hpp  ws.cpp  ws.hpp
HTTP/API/: api-rest.cpp  api-rest.hpp  api.cpp  api_agente.cpp  servidor_rest.cpp  servidor_rest.hpp
HTTP/WebSocket/: agent_ws_main.cpp  agente_websocket_main.cpp  cliente_http_agente.cpp  inicializacao_websocket_agente.cpp  websocket_agente.cpp  websocket_agente.hpp  websocket_interno.hpp  ws.cpp  ws.hpp  ws_bootstrap.cpp  ws_cloud.cpp  ws_internal.hpp
Keeply-Agent-main/keeply_mobile/: features.md  pubspec.yaml
Keeply-Agent-main/keeply_mobile/android/app/src/main/java/br/app/keeply/: CryptoChannel.java  DeviceInfoChannel.java  FileSystemChannel.java
Keeply-Agent-main/keeply_mobile/lib/: main.dart
Keeply-Agent-main/keeply_mobile/lib/controller/: backup_controller.dart  config_controller.dart  fs_controller.dart  identity_controller.dart  restore_controller.dart  ws_controller.dart
Keeply-Agent-main/keeply_mobile/lib/model/: agent_identity.dart  app_state.dart  backup_progress.dart  change_entry.dart  device_details.dart  fs_entry.dart  scan_scope.dart  snapshot.dart  ws_command.dart  ws_config.dart
Keeply-Agent-main/keeply_mobile/lib/view/: dashboard_screen.dart  test_screen.dart
Keeply-Agent-main/keeply_mobile/lib/view/widget/: command_tile.dart  log_panel.dart  schedule_card.dart  status_badge.dart
Storage/: arquivo_armazenamento.cpp  arquivo_armazenamento.hpp  backend_armazenamento.hpp
WebSocket/: inicializacao.cpp  websocket_agente.cpp  websocket_agente.hpp  websocket_interno.hpp  ws.cpp  ws.hpp  ws_cmd_backup.cpp  ws_cmd_fs.cpp  ws_cmd_restore.cpp
build_ws/: CMakeCache.txt  Makefile  cmake_install.cmake  keeply_agent_ws
cmake/: copy_runtime_deps.cmake
